picky/static/css/picky.css
/* POSITIONING */
body {
    margin-left: 80px;
}
.main {
    margin-right: 50px;
}

.column {
    width: 500px;
}

.header {
    margin-bottom: 50px;
}
.header .right-links {
    float: right;
}
h1 {
    margin: 0 0 10px 0;
}
p, ul, ol {
    margin-top: 16px;
    margin-bottom: 24px;
}
.page-tools {
}

/* TYPOGRAPHY */
body, p {
    font-family: 'Open Sans', Verdana, Helvetica, sans-serif;
}
h1, h2, h3, h4, h5, h6 {
    color: inherit;
}
h1 {
    font-size: 39px;
}
h2 {
    font-size: 22px;
}
h3 {
    font-size: 18px;
}
h4, h5, h6 {
    font-size: 16px;
}
p, ul, ol, li  {
    font-size: 16px;
    line-height: 24px;
}
h1, h2, h3, h4 {
    font-family: 'Bree Serif', Georgia, serif !important;
    font-weight: normal;
}

/* LISTS */
ul {
    list-style-type: square;
    margin-left: 0;
}

/* META */
.meta-links * {
    text-transform: uppercase;
    color: gray;
    font-size: 13px;
}
.meta-links a {
    margin-left: 16px;
}
.meta-links a:first-child {
    margin-left: 0;
}
.meta-links a:hover {
    color: black;
}
.meta-links .active {
    color: black;
}
.timestamp {
    border-bottom: 1px dotted gray;
}
.meta-links.footer {
    margin-top: -24px;
}

/* EDITING */
.editor {
    float: left;
    padding-right: 40px;
}
.editor input, .editor textarea {
    width: 490px;
    color: black;
    font-size: 16px;
}
#preview {
    float: left;
    color: gray;
}

